fix(aut-adopt): align top question title to the top if less than 3 lines (#4701)

--- a/src/pages/automate/common/components/TopQuestions/TopQuestionCard.less
+++ b/src/pages/automate/common/components/TopQuestions/TopQuestionCard.less
@@ -53,6 +53,7 @@
         .heading-subsection-semibold();
         color: var(--neutral-grey-6);
         .line-clamp(3);
+        height: 72px;
 
         i {
             font-size: 20px;
